<resources>
	<string name="app_name">Mentamatics</string>

	<string name="main_input_1" translatable="false">1</string>
	<string name="main_input_2" translatable="false">2</string>
	<string name="main_input_3" translatable="false">3</string>
	<string name="main_input_4" translatable="false">4</string>
	<string name="main_input_5" translatable="false">5</string>
	<string name="main_input_6" translatable="false">6</string>
	<string name="main_input_7" translatable="false">7</string>
	<string name="main_input_8" translatable="false">8</string>
	<string name="main_input_9" translatable="false">9</string>
	<string name="main_input_0" translatable="false">0</string>
	<string name="main_input_point" translatable="false">.</string>
	<string name="main_input_neg" translatable="false">&#x00B1; <!--&#x207A;&#x2215;&#x208B;--></string>
	<string name="main_input_backspace">Back</string>
	<!--<string name="main_input_delete">Delete</string>-->
	<string name="main_input_reset">Reset</string>

	<string name="no_generators">No problem types enabled. Addition is automatically enabled.</string>

	<string name="menu_main_pref">Preferences</string>

	<string name="pref_unlock_query">Please enter password to unlock preferences</string>
	<string name="pref_dialog_unlock_positive">Unlock</string>

	<string name="operator_addition">+</string>
	<string name="operator_subtraction">-</string>
	<string name="operator_multiplication">&#xd7;</string>
	<string name="operator_division">&#xf7;</string>

	<string name="config_root">Preferences</string>
	<string name="cfg_lock">Preference Lock</string>
	<string name="cfg_lock_summary">Protect preferences with a password</string>
	<string name="cfg_lock_error">Incorrect password!</string>
	<string name="cfg_gui">User Interface</string>
	<string name="cfg_gui_verticalAlign">Show question in vertical align</string>
	<string name="cfg_gui_verticalAlign_summary">The question is shown as a horizontal expression</string>
	<string name="cfg_gui_verticalAlign_summary_positive">The question is shown in straight calculation format</string>
	<string name="cfg_gen">Problem Generation</string>
	<string name="cfg_gen_addition">Addition</string>
	<string name="cfg_gen_addition_enabled">Generate addition problems</string>
	<string name="cfg_gen_addition_enabled_summary_positive">Addition problems will be generated.</string>
	<string name="cfg_gen_addition_enabled_summary">Addition problems will not be generated.</string>
	<string name="cfg_gen_addition_carryAllowed">Generate problems involving carry</string>
	<string name="cfg_gen_addition_carryAllowed_summary_positive">Problems like 83 + 17 will also be generated.</string>
	<string name="cfg_gen_addition_carryAllowed_summary">Only problems like 72 + 17 will not be generated.</string>
	<string name="cfg_gen_subtraction">Subtraction</string>
	<string name="cfg_gen_addition_digits">Number of digits</string>
	<string name="cfg_gen_addition_digits_summary" formatted="false">%d-%d digits + %d-%d digits</string>
	<string name="cfg_gen_subtraction_enabled">Generate subtraction problems</string>
	<string name="cfg_gen_subtraction_enabled_summary_positive">Subtraction problems will be generated.</string>
	<string name="cfg_gen_subtraction_enabled_summary">Subtraction problems will not be generated.</string>
	<string name="cfg_gen_subtraction_borrowAllowed">Generate problems involving borrow</string>
	<string name="cfg_gen_subtraction_borrowAllowed_summary_positive">Problems like 95 – 16 will also be generated.
	</string>
	<string name="cfg_gen_subtraction_borrowAllowed_summary">Only problems like 95 – 14 will be generated.</string>
	<string name="cfg_gen_subtraction_negativeAllowed">Allow negative results</string>
	<string name="cfg_gen_subtraction_negativeAllowed_summary_positive">Both questions with positive and negative
		answers are generated.
	</string>
	<string name="cfg_gen_subtraction_negativeAllowed_summary">Only questions with positive answers are generated.
	</string>
	<string name="cfg_gen_subtraction_digits">Number of digits</string>
	<string name="cfg_gen_subtraction_digits_summary" formatted="false">%d-%d digits – %d-%d digits</string>
	<string name="cfg_gen_multiplication">Multiplication</string>
	<string name="cfg_gen_multiplication_enabled">Generate multiplication problems</string>
	<string name="cfg_gen_multiplication_enabled_summary_positive">Multiplication problems will be generated.</string>
	<string name="cfg_gen_multiplication_enabled_summary">Multiplication problems will not be generated.</string>
	<string name="cfg_gen_multiplication_digits">Number of digits</string>
	<string name="cfg_gen_multiplication_digits_summary" formatted="false">%d-%d digits &#xd7; %d-%d digits</string>
	<string name="cfg_gen_division">Division</string>
	<string name="cfg_gen_division_enabled">Generate division problems</string>
	<string name="cfg_gen_division_enabled_summary_positive">Division problems will be generated.</string>
	<string name="cfg_gen_division_enabled_summary">Division problems will not be generated.</string>
	<string name="cfg_special_resetStats">Reset statistics</string>
	<string name="cfg_special_resetStats_summary">Delete all statistics about problem completion but preserve these
		preferences
	</string>

	<string name="main_stats_correct_answers">Problems</string>
	<string name="main_stats_total_time">Total time (s)</string>
	<string name="main_stats_average_time">Average time (s/q)</string>
	<string name="main_stats_format_correct_answers" formatted="false">%d</string>
	<string name="main_stats_format_total_time" formatted="false">%s + %s</string>
	<string name="main_stats_format_average_time" formatted="false">%s ⇒ %s</string>
	<string name="btn_keyboard_gravity_left"><![CDATA[<]]></string>
	<string name="btn_keyboard_gravity_right"><![CDATA[>]]></string>
	<string name="cfgmsg_special_resetStats_cancelled">Cancelled resetting stats</string>
	<string name="stats_na">N/A</string>
	<string name="cfgmsg_special_resetStats_completion">Deleted all statistics about problem completion but preserve these
		preferences.
	</string>
	<string name="cfgmsg_special_resetStats_message">The data cannot be restored once deleted.</string>
	<string name="cfgmsg_special_resetStats_title">Reset all statistics?</string>
	<string name="main_stats_header_recent">Recent</string>
	<string name="main_stats_header_overall">Overall</string>
	<string name="main_input_tab">Next field</string>
    <string name="plus">+</string>
</resources>
