<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainKeyboard"
    android:layout_width="@dimen/keyboardWidth"
    android:layout_height="@dimen/keyboardHeight"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:columnCount="4"
    android:rowCount="4">

    <Button
        android:id="@+id/main_input_7"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_7"/>

    <Button
        android:id="@+id/main_input_8"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_8"/>

    <Button
        android:id="@+id/main_input_9"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="0"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_9"/>

    <Button
        android:id="@+id/main_input_4"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_4"/>

    <Button
        android:id="@+id/main_input_5"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_5"/>

    <Button
        android:id="@+id/main_input_6"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="1"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_6"/>

    <Button
        android:id="@+id/main_input_1"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_1"/>

    <Button
        android:id="@+id/main_input_2"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_2"/>

    <Button
        android:id="@+id/main_input_3"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="2"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_3"/>

    <Button
        android:id="@+id/main_input_0"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_0"/>

    <Button
        android:id="@+id/main_input_point"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_point"/>

    <Button
        android:id="@+id/main_input_sign"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="3"
        android:onClick="onKeyboardButtonClick"
        android:text="@string/main_input_neg"/>

    <ImageButton
        android:id="@+id/main_input_back"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:contentDescription="@string/main_input_backspace"
        android:onClick="onKeyboardButtonClick"
        android:src="@android:drawable/ic_input_delete"/>

    <ImageButton
        android:id="@+id/main_input_reset"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="2"
        android:layout_rowSpan="2"
        android:contentDescription="@string/main_input_reset"
        android:onClick="onKeyboardButtonClick"
        android:src="@android:drawable/ic_delete"/>

    <ImageButton
        android:id="@+id/main_input_tab"
        style="@style/NumberButtons"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="3"
        android:layout_rowSpan="0"
        android:contentDescription="@string/main_input_tab"
        android:onClick="onKeyboardButtonClick"
        android:src="@android:drawable/ic_media_ff"/>
</GridLayout>
